add-bookings v1.0